maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while(!estSurBiscuit()){
  ^Escaper:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  prendBiscuit()
  ^